manifests/10_qicoo-api/14_ingress/qicoo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: qicoo-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "35.190.48.214"
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/managed-certificates: "qicoo-tls-cert"
spec:
  rules:
  - http:
      paths:
      - path: /api/v1/*
        backend:
          serviceName: qicoo-api
          servicePort: 37000
      - path: /*
        backend:
          serviceName: qicoo-front
          servicePort: 37000
